Modified registration route to take a valid avatar or avatar_url
