# src/routes/auth.route.ts
@@ -1,19 +1,24 @@
+import { imageFilter } from './../middlewares/users.middleware';
 import { body } from 'express-validator';
 import { checkIfAuthenticated } from './../middlewares/auth.middleware';
 import { logoutController, refreshController, updateUserPasswordController } from './../controllers/auth.controller';
 import { Request, Router, Response, NextFunction } from 'express';
 import { registerController, loginController } from '../controllers/auth.controller';
 
+import multer from 'multer';
+
 const MIN_PASS_LENGTH = 8;
 const MAX_PASS_LENGTH = 256;
 
 const router = Router();
+const storage = multer.memoryStorage();
+const upload = multer({ storage: storage, fileFilter: imageFilter }).any()
 
 router.get('/login', checkIfAuthenticated, (req: Request, res: Response, next: NextFunction) =>
     loginController(req, res, next)
 );
 
-router.post('/register',
+router.post('/register', upload,
     body("username")
         .notEmpty()
         .isAlphanumeric()
@@ -33,6 +38,9 @@ router.post('/register',
     body("last_name")
         .notEmpty()
         .withMessage("Invalid or missing last name."),
+    body("avatar_url")
+        .optional()
+        .isURL(),
     async (req, res, next) => await registerController(req, res, next));
 
 router.get(
